--- a/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
@@ -43,8 +43,8 @@ De krachten op Maria zijn:
 
 Merk op hoe we [krachten
 noteren](krachtvector#kracht-is-een-vectoriële-grootheid).
-$\vec{F}\_{DM}$ betekent: "de kracht van
-**D**irk op **M**aria", terwijl $\vec{F}\_{MD}$ betekent "de kracht van
+$\vec{F}_{DM}$ betekent: "de kracht van
+**D**irk op **M**aria", terwijl $\vec{F}_{MD}$ betekent "de kracht van
 **M**aria op **D**irk".
 
 We kunnen ook de krachten tekenen die op Dirk inwerken. De kracht die Dirk zelf op
