--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -24,8 +24,8 @@ uitoefent, noemen we een **normaalkracht**.
 
 ## Een normaalkracht ondersteunt
 
-Een normaalkracht $\vec{F}\_{n}$ is een kracht die een **ondersteuning
-uitoefent op een voorwerp**. Het aangrijpingspunt van $\vec{F}\_{n}$ tekenen we
+Een normaalkracht $\vec{F}_{n}$ is een kracht die een **ondersteuning
+uitoefent op een voorwerp**. Het aangrijpingspunt van $\vec{F}_{n}$ tekenen we
 op de plaats waar de ondersteuning contact maakt met het voorwerp.
 
 Stel dat Maria en Dirk zich wagen aan een bezoekje aan de lokale speeltuin.
@@ -34,8 +34,8 @@ Maria zet zich op de glijbaan en Dirk gaat aan het klimrek hangen.
 ![Maria en Dirk in de speeltuin](img/speeltuin.png)
 
 Maria wordt ondersteund door de glijbaan. De glijbaan oefent dus een
-normaalkracht $\vec{F}\_{nM}$ uit op Maria. Het aangrijpingspunt van
-$\vec{F}\_{nM}$ tekenen we aan het zitvlak van Maria.
+normaalkracht $\vec{F}_{nM}$ uit op Maria. Het aangrijpingspunt van
+$\vec{F}_{nM}$ tekenen we aan het zitvlak van Maria.
 
 ![Normaalkracht uitgeoefend door glijbaan](img/normaalkracht_schuifaf.png)
 
@@ -71,7 +71,7 @@ glijbaan gelijk aan de grootte van de zwaartekracht op Maria.
 
 $$
 \begin{aligned}
-F_g &= F\_{zM}\\
+F_g &= F_{zM}\\
  &= m_M \cdot g\\
  &= 65{,}0~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 637{,}65~\si{N}\\
