--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -22,9 +22,9 @@ Zwaartekracht is een kracht en is dus [vectorieel](krachtvector). De zwaartekrac
 
 | Schrijf                | Lees                                   |
 | ---------------------- | -------------------------------------- |
-| $\vec{F}\_{zA}$        | De zwaartekracht op $A$                |
-| $\norm{\vec{F}\_{zA}}$ | De grootte van de zwaartekracht op $A$ |
-| $F\_{zA}$              | De grootte van de zwaartekracht op $A$ |
+| $\vec{F}_{zA}$        | De zwaartekracht op $A$                |
+| $\norm{\vec{F}_{zA}}$ | De grootte van de zwaartekracht op $A$ |
+| $F_{zA}$              | De grootte van de zwaartekracht op $A$ |
 
 Stel dat Dirk een bowlingbal vasthoudt. De zwaartekracht waarmee de aarde de
 bowlingbal naar beneden trekt, duiden we dan aan als $\vec{F}_{zb}$. De
@@ -85,7 +85,7 @@ $g_{aarde}=9{,}81~\si{N/kg}$.
 
 $$
 \begin{aligned}
-F\_{zb} &= m_b \cdot g\_{aarde}\\
+F_{zb} &= m_b \cdot g_{aarde}\\
  &= 5{,}00~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 49{,}1~\si{N}
 \end{aligned}
@@ -98,7 +98,7 @@ voelt Dirk nu? Neem $g_{maan}=1{,}62~\si{N/kg}$.
 
 $$
 \begin{aligned}
-F\_{zb} &= m_b \cdot g\_{maan}\\
+F_{zb} &= m_b \cdot g_{maan}\\
  &= 5{,}00~\si{kg} \cdot 1{,}62~\si{N/kg}\\
  &= 8{,}10~\si{N}
 \end{aligned}
@@ -111,7 +111,7 @@ bal vasthoudt op aarde?
 
 $$
 \begin{aligned}
-F\_{zv} &= m_v \cdot g\_{aarde}\\
+F_{zv} &= m_v \cdot g_{aarde}\\
  &= 0{,}410~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 4{,}02~\si{N}
 \end{aligned}
