--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -82,17 +82,17 @@ $$
 We krijgen nu een vergelijking van de vorm
 
 $$
-\red{a\_{links}\cdot x} + b\_{links} = \green{a\_{rechts}\cdot x} + \blue{b\_{rechts}}
+\red{a_{links}\cdot x} + b_{links} = \green{a_{rechts}\cdot x} + \blue{b_{rechts}}
 $$
 
 
 Waarbij
 $$
 \begin{aligned}
-\red{a\_{links}} &= \red{-2}\\
- b\_{links} &= -2\\
- \green{a\_{rechts}} &= \green{3} \\
- \blue{b\_{rechts}} &= \blue{12}
+\red{a_{links}} &= \red{-2}\\
+ b_{links} &= -2\\
+ \green{a_{rechts}} &= \green{3} \\
+ \blue{b_{rechts}} &= \blue{12}
 \end{aligned}
 $$
 
@@ -100,11 +100,11 @@ $$
 
 De volgende stap is om alle termen met een $x$ als lettergedeelte naar de
 linkerkant te brengen. We [vormen de vergelijking om](omvormen) door de
-$\green{a\_{rechts}x}$
+$\green{a_{rechts}x}$
 uit het **rechter**lid van de vergelijking af te trekken. Dan zal de
-$\green{a\_{rechts}x}$ uit het
+$\green{a_{rechts}x}$ uit het
 rechterlid wegvallen en hebben we enkel in het linkerlid nog een $x$.
-In ons voorbeeld is de $\green{a\_{rechts}x}$ uit het rechterlid $\green{3x}$.
+In ons voorbeeld is de $\green{a_{rechts}x}$ uit het rechterlid $\green{3x}$.
 
 $$
 \begin{aligned}
@@ -120,7 +120,7 @@ We krijgen een vergelijking van de vorm
 
 
 $$
-a\cdot x + b\_{links} = b_{rechts}
+a\cdot x + b_{links} = b_{rechts}
 $$
 
 
@@ -129,8 +129,8 @@ met enkel nog in het linkerlid een $x$. Hierbij is
 $$
 \begin{aligned}
 a &= -5\\
- b\_{links} &= -2\\
- b\_{rechts} &= 12
+ b_{links} &= -2\\
+ b_{rechts} &= 12
 \end{aligned}
 $$
 
@@ -139,11 +139,11 @@ $$
 In de laatste stap brengen we de getallen die in het linkerlid nog overblijven
 naar het rechterlid. Dat doen we ook in twee stappen.
 
-1. Trek links en rechts de $b\_{links}$ af zodat deze verdwijnt uit het linkerlid;
+1. Trek links en rechts de $b_{links}$ af zodat deze verdwijnt uit het linkerlid;
 2. Deel het linker- en rechterlid door de $a$ zodat $a$ verdwijnt uit het
    linkerlid.
 
-In de eerste stap trekken we $b\_{links}$ <Mute text="($= -2$)" /> af van het linker- en rechterlid:
+In de eerste stap trekken we $b_{links}$ <Mute text="($= -2$)" /> af van het linker- en rechterlid:
 $$
 \begin{aligned}
 \Leftrightarrow -5x - 2 &= 12\\
@@ -193,18 +193,18 @@ Om een vergelijking op te lossen van de eerste graad met één onbekende, volgen
 
 1. Kuis de vergelijking op tot iets van de vorm 
 $$
-a_{links}\cdot x + b\_{links} = a\_{rechts}\cdot x + b\_{rechts}
+a_{links}\cdot x + b_{links} = a_{rechts}\cdot x + b_{rechts}
 $$
 
 2. Breng alle $x$-en naar de linkerkant door van de vergelijking
-   $a\_{rechts}\cdot x$ af te trekken. Je krijgt nu iets van de vorm
+   $a_{rechts}\cdot x$ af te trekken. Je krijgt nu iets van de vorm
    
 $$
-a\cdot x + b\_{links} = b\_{rechts}
+a\cdot x + b_{links} = b_{rechts}
 $$
 
 3. Breng alle getallen naar de rechterkant door van de vergelijking eerst
-   $b\_{links}$ af te trekken zodat je iets van de vorm 
+   $b_{links}$ af te trekken zodat je iets van de vorm 
 $$
 a\cdot x = b
 $$
