--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -44,7 +44,7 @@ berekenen voor $\Delta x$ naar $0$**:
 
 
 $$
-\lim\_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
+\lim_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
 $$
 
 
@@ -53,7 +53,7 @@ schrijven we "$f'(a)$" <Mute text="(let op het accentje na de $f$)" />:
 
 
 $$
-f'(a) = \lim\_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
+f'(a) = \lim_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
 $$
 
 
@@ -79,7 +79,7 @@ $4$. We moeten dus de uitkomst van de volgende limiet vinden:
 
 
 $$
-f'(4) = \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}
+f'(4) = \lim_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}
 $$
 
 
@@ -178,7 +178,7 @@ uitkomst van het differentiequotiënt gaat naar $-24$. We kunnen dus zeggen dat:
 
 $$
 \begin{aligned}
-f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
+f'(4) &= \lim_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
  &= -24
 \end{aligned}
 $$
@@ -204,7 +204,7 @@ Om de afgeleide in $x = 4$ te vinden, moeten we de volgende limiet uitrekenen:
 
 
 $$
-f'(4) = \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}
+f'(4) = \lim_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}
 $$
 
 
@@ -245,10 +245,10 @@ we ons voorlopig niets aan, die schrijven we gewoon over.
 
 $$
 \begin{aligned}
-f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
- &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} - (\green{-43})}{\orange{\Delta x}}\\
- &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} + 43}{\orange{\Delta x}}\\
- &= \lim\_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}\\
+f'(4) &= \lim_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
+ &= \lim_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} - (\green{-43})}{\orange{\Delta x}}\\
+ &= \lim_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} + 43}{\orange{\Delta x}}\\
+ &= \lim_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}\\
 \end{aligned}
 $$
 
@@ -257,8 +257,8 @@ noemer zijn **deelbaar door $\Delta x$**:
 
 $$
 \begin{aligned}
-\lim\_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}
-&= \lim\_{\Delta x \to 0} \frac{\green{- 24 - 3\Delta x}}{\orange{1}} \\
+\lim_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}
+&= \lim_{\Delta x \to 0} \frac{\green{- 24 - 3\Delta x}}{\orange{1}} \\
 \end{aligned}
 $$
 
@@ -266,7 +266,7 @@ Zo krijgen we een heel eenvoudige limiet:
 
 
 $$
-\lim\_{\Delta x \to 0} (\green{- 24 - 3\Delta x})
+\lim_{\Delta x \to 0} (\green{- 24 - 3\Delta x})
 $$
 
 
@@ -282,7 +282,7 @@ $\green{-24}$ over:
 
 
 $$
-\lim\_{\Delta x \to 0} (\green{- 24 - 3\Delta x}) = \green{-24}
+\lim_{\Delta x \to 0} (\green{- 24 - 3\Delta x}) = \green{-24}
 $$
 
 
@@ -298,7 +298,7 @@ De afgeleide in $x = a$ van een functie $f(x)$ is gedefinieerd als:
 
 
 $$
-f'(a) = \lim\_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
+f'(a) = \lim_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
 $$
 
 
