--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -67,7 +67,7 @@ Herinner je de definitie van de afgeleide van $f(x)$ in $a$:
 
 
 $$
- f'(a) = \lim\_{\Delta x \rightarrow 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x} 
+ f'(a) = \lim_{\Delta x \rightarrow 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x} 
 $$
 
 
@@ -78,7 +78,7 @@ moeten in onze definitie van $f'(a)$ de $a$ dus gewoon vervangen door een $x$:
 
 
 $$
- f'(\blue{x}) = \lim\_{\Delta x \rightarrow 0} \frac{ f(\blue{x} + \Delta x) - f(\blue{x}) }{\Delta x} 
+ f'(\blue{x}) = \lim_{\Delta x \rightarrow 0} \frac{ f(\blue{x} + \Delta x) - f(\blue{x}) }{\Delta x} 
 $$
 
 
@@ -196,7 +196,7 @@ $f(x)$ afleidbaar is) de afgeleide van $f(x)$ in die x-waarde geeft.
 
 
 $$
- f'(x) = \lim\_{\Delta x \rightarrow 0} \frac{ f(x + \Delta x) - f(x) }{\Delta x} 
+ f'(x) = \lim_{\Delta x \rightarrow 0} \frac{ f(x + \Delta x) - f(x) }{\Delta x} 
 $$
 
 
