--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -17,7 +17,7 @@ een punt $x = a$ kunnen berekenen:
 
 
 $$
- f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} 
+ f'(a) = \lim_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} 
 $$
 
 
@@ -38,7 +38,7 @@ berekenen van de afgeleide van $f(x)$ in $x = a$ laat $\Delta x$ naar $0$ gaan:
 
 
 $$
- \gray{f'(a) = \orange{\lim\_{\Delta x \to 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} 
+ \gray{f'(a) = \orange{\lim_{\Delta x \to 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} 
 $$
 
 
@@ -65,7 +65,7 @@ dichter bij $0$ komen.
     **linkerlimiet** berekenen <Mute text="(omdat we van links naar $0$ gaan)" />. Dit
     schrijven we als 
 $$
-\lim\_{\Delta x \lt{\to} 0}
+\lim_{\Delta x \lt{\to} 0}
 $$
  Let op het
     _kleiner dan_-teken ($\lt$) onder de pijl van de limiet.
@@ -73,7 +73,7 @@ $$
     **rechterlimiet** berekenen <Mute text="(omdat we van rechts naar $0$ gaan)" />. Dit
     schrijven we als 
 $$
-\lim\_{\Delta x \gt{\to} 0}
+\lim_{\Delta x \gt{\to} 0}
 $$
  Let op het
     _groter dan_-teken ($\gt$) onder de pijl van de limiet.
@@ -90,13 +90,13 @@ rechterafgeleide**:
 -   De **linkerafgeleide** in $x = a$ is de afgeleide die je krijgt door de **linkerlimiet**
     te berekenen: 
 $$
- \gray{\orange{\lim\_{\Delta x \lt{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} 
+ \gray{\orange{\lim_{\Delta x \lt{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} 
 $$
 
 -   De **rechterafgeleide** in $x = a$ is de afgeleide die je krijgt door de **rechterlimiet**
     te berekenen: 
 $$
- \gray{\orange{\lim\_{\Delta x \gt{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} 
+ \gray{\orange{\lim_{\Delta x \gt{\to} 0}} \frac{ f(a + \Delta x) - f(a) }{\Delta x}} 
 $$
 
 
@@ -182,12 +182,12 @@ rechterafgeleide in $x = a$ **bestaan én gelijk** zijn.
 
 -   De linkerafgeleide is gedefinieerd als: 
 $$
-\lim\_{\Delta x
+\lim_{\Delta x
   \lt{\to} 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x} 
 $$
 -   De rechterafgeleide is gedefinieerd als: 
 $$
- \lim\_{\Delta x
+ \lim_{\Delta x
   \gt{\to} 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x}
 $$
 
