--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -110,7 +110,7 @@ dat $\vec{F}_{rM}$ dezelfde zin heeft als de snelheidsvector. Maria zal dus
 Wanneer $\vec{F}\_r$ een **andere zin** heeft dan $\vec{v}$, dan zal het
 voorwerp **vertragen**. Stel bijvoorbeeld dat Maria minder hard begint te
 trappen en nu nog slechts met een kracht trapt van $30~\si{N}$. Dan zien we dat
-$\vec{F}\_{rM}$ nu een andere zin heeft dan $\vec{v}$. Maria zal dus
+$\vec{F}_{rM}$ nu een andere zin heeft dan $\vec{v}$. Maria zal dus
 **vertragen**.
 
 ![Maria vertraagt](img/maria_wind_vertraagt.png)
