Fix some katex in tables

--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -103,15 +103,7 @@ bekijken, zien we toch wel opvallende gelijkenissen met de formule voor het
 
 | Formule voor de rico van een eerstegraadsfunctie                                     | Formule voor het differentiequotiënt                                                 |
 | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------ |
-| 
-$$
-\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}
-$$
- | 
-$$
-\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}
-$$
- |
+| $$ \frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}} $$ | $$ \frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}} $$ |
 
 De formule voor de **rico en het differentiequotiënt zijn identiek dezelfde**!
 Wat betekent dat? Wel, wanneer we een differentiequotiënt berekenen, berekenen
