--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -75,7 +75,7 @@ volgt schrijven:
 
 
 $$
-\text{gem. snelheid} = \frac{\green{\text{positie}\_2} - \green{\text{positie}\_1}}{\orange{\text{tijd}\_2} - \orange{\text{tijd}\_1}}
+\text{gem. snelheid} = \frac{\green{\text{positie}_2} - \green{\text{positie}_1}}{\orange{\text{tijd}_2} - \orange{\text{tijd}_1}}
 $$
 
 
@@ -102,29 +102,29 @@ waarbij de **tijd op de x-as** <Mute text="(horizontale as)" /> staat en de
 
 We kunnen nu onze formule voor gemiddelde snelheid korter schrijven waarbij we
 
--   $\green{\text{positie}\_2}$ en $\green{\text{positie}\_1}$ vervangen door
-    $\green{f(x\_2)}$ en $\green{f(x\_1)}$
--   $\orange{\text{tijd}\_2}$ en $\orange{\text{tijd}\_1}$ vervangen door
-    $\orange{x\_2}$ en $\orange{x\_1}$
+-   $\green{\text{positie}_2}$ en $\green{\text{positie}_1}$ vervangen door
+    $\green{f(x_2)}$ en $\green{f(x_1)}$
+-   $\orange{\text{tijd}_2}$ en $\orange{\text{tijd}_1}$ vervangen door
+    $\orange{x_2}$ en $\orange{x_1}$
 
 Zo krijgen we:
 
 
 $$
-\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{x\_2} - \orange{x\_1}}
+\frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{x_2} - \orange{x_1}}
 $$
 
 
--   In de teller <Mute text="(boven)" /> staat $\green{f(x\_2)} -
-  \green{f(x\_1)}$. Daarmee berekenen we het verschil van de functiewaarden van
-    $x\_2$ en $x\_1$. **De teller zegt zo hoeveel de functiewaarde is veranderd**
-    tussen $x\_1$ en $x\_2$.
+-   In de teller <Mute text="(boven)" /> staat $\green{f(x_2)} -
+  \green{f(x_1)}$. Daarmee berekenen we het verschil van de functiewaarden van
+    $x_2$ en $x_1$. **De teller zegt zo hoeveel de functiewaarde is veranderd**
+    tussen $x_1$ en $x_2$.
 -   In de noemer <Mute text="(onder)" /> staat dan weer het verschil van die
-    $x\_2$ en $x\_1$ zélf. Door te delen door $\orange{x\_2} - \orange{x\_1}$
+    $x_2$ en $x_1$ zélf. Door te delen door $\orange{x_2} - \orange{x_1}$
     berekenen we de "**gemiddelde** verandering van de functiewaarde **per
-    $x-$eenheid** <Mute text="(bv. per seconde)" /> tussen $x\_1$ en $x\_2$" in
-    plaats van gewoon de "verandering van de functiewaarde tussen $x\_1$ en
-    $x\_2$".
+    $x-$eenheid** <Mute text="(bv. per seconde)" /> tussen $x_1$ en $x_2$" in
+    plaats van gewoon de "verandering van de functiewaarde tussen $x_1$ en
+    $x_2$".
 
 <Expand title="Waarom zorgt die deling door $\orange{x_2} - \orange{x_1}$ voor een gemiddelde?">
 
@@ -134,7 +134,7 @@ Op dezelfde manier krijgen we de **gemiddelde** verandering van de functiewaarde
 
 </Expand>
 
-We zeggen dat deze formule de **gemiddelde verandering van de functiewaarde** berekent per $x-$eenheid tussen $\orange{x\_1}$ en $\orange{x\_2}$.
+We zeggen dat deze formule de **gemiddelde verandering van de functiewaarde** berekent per $x-$eenheid tussen $\orange{x_1}$ en $\orange{x_2}$.
 
 ![](img/diff_quot_intuitie.png)
 
@@ -157,8 +157,8 @@ naam vandaan? Het woord bestaat uit twee stukken:
 ## Het verschil afkorten met $\Delta$
 
 Tot slot gaan we het differentiequotiënt nog een tikkeltje korter leren
-schrijven. Verschillen als "$\green{f(x\_2)} - \green{f(x\_1)}$" en
-"$\orange{x\_2} - \orange{x\_1}$" komen namelijk vaak voor en het is lastig om
+schrijven. Verschillen als "$\green{f(x_2)} - \green{f(x_1)}$" en
+"$\orange{x_2} - \orange{x_1}$" komen namelijk vaak voor en het is lastig om
 die telkens voluit te moeten schrijven. Daarom gaan we zulke verschillen
 afkorten. Hiervoor gebruiken we de Griekse hoofdletter $\Delta$ (de delta):
 
@@ -175,7 +175,7 @@ differentiequotiënt als volgt afkorten:
 
 
 $$
-\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{x\_2} - \orange{x\_1}} = \frac{\green{\Delta f(x)}}{\orange{\Delta x}}
+\frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{x_2} - \orange{x_1}} = \frac{\green{\Delta f(x)}}{\orange{\Delta x}}
 $$
 
 
@@ -185,17 +185,17 @@ Op een grafiek kan je $\green{\Delta f(x)}$ en $\orange{\Delta x}$ ook aanduiden
 
 Je zult het waarschijnlijk niet graag horen, maar er is nog een derde en laatste manier om het differentiequotiënt te schrijven. Daarbij gaan we drie dingen veranderen aan de oorspronkelijke formule van het differentiequotiënt:
 
-1. Vervang $\orange{x\_2} - \orange{x\_1}$ door $\orange{\Delta x}$: 
+1. Vervang $\orange{x_2} - \orange{x_1}$ door $\orange{\Delta x}$: 
 $$
-\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\Delta x}}
-$$
-
-2. Vervang $x\_2$ door $x\_1 + \Delta x$: 
-$$
-\frac{\green{f(x\_1 + \Delta x)} - \green{f(x\_1)}}{\orange{\Delta x}}
+\frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{\Delta x}}
 $$
 
-3. Vervang $x\_1$ overal door $a$: 
+2. Vervang $x_2$ door $x_1 + \Delta x$: 
+$$
+\frac{\green{f(x_1 + \Delta x)} - \green{f(x_1)}}{\orange{\Delta x}}
+$$
+
+3. Vervang $x_1$ overal door $a$: 
 $$
 \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}
 $$
@@ -209,7 +209,7 @@ We hebben nu drie verschillende manieren gezien om het differentiequotiënt te s
 
 1. 
 $$
-\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{x\_2} - \orange{x\_1}}
+\frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{x_2} - \orange{x_1}}
 $$
 
 2. 
@@ -231,17 +231,17 @@ Het is belangrijk om in te zien dat deze alle drie **identiek dezelfde berekenin
 
 Een differentiequotiënt zegt hoeveel de $\green{\text{functiewaarde}}$
 gemiddeld $\orange{\text{per x-eenheid}}$ verandert tussen een gekozen
-$\orange{x\_1}$ en $\orange{x\_2}$.
+$\orange{x_1}$ en $\orange{x_2}$.
 
 Het differentiequotiënt is gedefinieerd als:
 
 
 $$
-\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{x\_2} - \orange{x\_1}}
+\frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{x_2} - \orange{x_1}}
 $$
 
 
-Door $\green{f(x\_2) - f(x\_1)}$ te vervangen door $\green{\Delta f(x)}$ en $\orange{x\_2 - x\_1}$ door $\orange{\Delta x}$, kunnen we het differentiequotiënt ook schrijven als:
+Door $\green{f(x_2) - f(x_1)}$ te vervangen door $\green{\Delta f(x)}$ en $\orange{x_2 - x_1}$ door $\orange{\Delta x}$, kunnen we het differentiequotiënt ook schrijven als:
 
 
 $$
@@ -249,7 +249,7 @@ $$
 $$
 
 
-Een andere schrijfwijze vervangt $\orange{x\_2} - \orange{x\_1}$ door $\orange{\Delta x}$, $\green{f(x\_2)}$ door $\green{f(x\_1 + \Delta x)}$ en vervangt ten slotte $\green{x\_1}$ overal door $\green{a}$:
+Een andere schrijfwijze vervangt $\orange{x_2} - \orange{x_1}$ door $\orange{\Delta x}$, $\green{f(x_2)}$ door $\green{f(x_1 + \Delta x)}$ en vervangt ten slotte $\green{x_1}$ overal door $\green{a}$:
 
 
 $$
