--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -70,25 +70,25 @@ $$
 
 Het aantal stappen opzij is eigenlijk hetzelfde als hoeveel verschil er zit
 tussen de _x-waarde_ van het rechtse punt en de _x-waarde_ van het linkse punt.
-We zullen de x-waarde van het rechtse punt $\orange{x\_2}$ noemen en de
-x-waarde van het linkse punt $\orange{x\_1}$:
+We zullen de x-waarde van het rechtse punt $\orange{x_2}$ noemen en de
+x-waarde van het linkse punt $\orange{x_1}$:
 
 
 $$
-\text{rico} = \frac{\green{\text{hoeveel we stijgen of dalen}}}{\orange{x\_2} - \orange{x\_1}}
+\text{rico} = \frac{\green{\text{hoeveel we stijgen of dalen}}}{\orange{x_2} - \orange{x_1}}
 $$
 
 
 Hoeveel we stijgen of dalen, is dan weer hetzelfde als hoeveel verschil er zit
 tussen de _y-waarde_ van het rechtse punt en de _y-waarde_ van het linkse punt.
 De y-waarde van het rechtse punt is hetzelfde als de _functiewaarde_ van
-$x\_2$. Die kunnen we dus schrijven als $\green{f(x\_2)}$. Zo is ook de
-y-waarde van het _linkse_ punt hetzelfde als de functiewaarde van $x\_1$, of
-$\green{f(x\_1)}$:
+$x_2$. Die kunnen we dus schrijven als $\green{f(x_2)}$. Zo is ook de
+y-waarde van het _linkse_ punt hetzelfde als de functiewaarde van $x_1$, of
+$\green{f(x_1)}$:
 
 
 $$
-\text{rico} = \frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}
+\text{rico} = \frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{\orange{x_2} - \orange{x_1}}}
 $$
 
 
@@ -103,13 +103,13 @@ bekijken, zien we toch wel opvallende gelijkenissen met de formule voor het
 
 | Formule voor de rico van een eerstegraadsfunctie                                     | Formule voor het differentiequotiënt                                                 |
 | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------ |
-| $$ \frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}} $$ | $$ \frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}} $$ |
+| $$ \frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{\orange{x_2} - \orange{x_1}}} $$ | $$ \frac{\green{f(x_2)} - \green{f(x_1)}}{\orange{\orange{x_2} - \orange{x_1}}} $$ |
 
 De formule voor de **rico en het differentiequotiënt zijn identiek dezelfde**!
 Wat betekent dat? Wel, wanneer we een differentiequotiënt berekenen, berekenen
 we eigenlijk ook de **rico** van de eerstegraadsfunctie <Mute text="(of de
-rechte)" /> die door de punten met coördinaten $(\orange{x\_1},
-\green{f(x\_1)})$ en $(\orange{x\_2}, \green{f(x\_2)})$ gaat!
+rechte)" /> die door de punten met coördinaten $(\orange{x_1},
+\green{f(x_1)})$ en $(\orange{x_2}, \green{f(x_2)})$ gaat!
 
 ![Het differentiequotiënt tussen twee punten is het zelfde als richtingscoëfficiënt (rico) van de rechte die die twee punten verbindt.](img/difquot_als_rico.png)
 
@@ -145,10 +145,10 @@ raaklijn** van de functie in $x = a$ liggen.
 In de voorgaande paragrafen hebben we twee dingen geleerd:
 
 1. Het berekenen van het differentiequotiënt tussen twee punten
-   $(\orange{x\_1}, \green{f(x\_1)})$ en $(\orange{x\_2}, \green{f(x\_2)})$ is
+   $(\orange{x_1}, \green{f(x_1)})$ en $(\orange{x_2}, \green{f(x_2)})$ is
    hetzelfde als het berekenen van de **rico van de eerstegraadsfunctie** die
-   door de punten met coördinaten $(\orange{x\_1}, \green{f(x\_1)})$ en
-   $(\orange{x\_2}, \green{f(x\_2)})$ gaat
+   door de punten met coördinaten $(\orange{x_1}, \green{f(x_1)})$ en
+   $(\orange{x_2}, \green{f(x_2)})$ gaat
 2. Het berekenen van de **limiet** van $\Delta x$ naar $0$ in de formule van de
    afgeleide van een functie in $x = a$, zorgt ervoor dat we het
    differentiequotiënt berekenen tussen twee punten die op de **raaklijn** aan
