--- a/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
@@ -36,7 +36,7 @@ tweede met vector $\vec{s}_2$.
 
 ![](img/verpl_1_2.png)
 
-Aan welke vector is $\vec{s}\_1 + \vec{s}\_2$ dan gelijk? Wel, we kijken **waar
+Aan welke vector is $\vec{s}_1 + \vec{s}_2$ dan gelijk? Wel, we kijken **waar
 we vertrokken zijn en tekenen een vector naar waar we geëindigd zijn**. Dat is
 de som van de eerste verplaatsing en de tweede verplaatsing.
 
