--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -66,7 +66,7 @@ als je weet dat Maria een massa heeft van $65{,}0~\si{kg}$?
 
 De zwaartekracht trekt Maria naar beneden. Hierdoor oefent ze een gewicht uit
 op de glijbaan. Er zijn geen andere krachten die Maria tegen de glijbaan
-trekken. Daarom is de grootte het gewicht $\vec{F}\_g$ dat ze uitoefent op de
+trekken. Daarom is de grootte het gewicht $\vec{F}_g$ dat ze uitoefent op de
 glijbaan gelijk aan de grootte van de zwaartekracht op Maria.
 
 $$
