Remove KaTeX commands from titles

--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -79,7 +79,7 @@ verandert.
 
 ![](img/snelheid_draait.png)
 
-## $\vec{F}_r$ bepaalt de snelheidsverandering
+## De resulterende kracht bepaalt de snelheidsverandering
 
 De snelheidsvector kan dus op twee manieren veranderen. Als de **grootte
 verandert**, dan **versnel of vertraag** je. En als de **richting verandert**,
@@ -89,7 +89,7 @@ Maar wanneer verandert de grootte en wanneer verandert de richting? Dat hangt
 af van hoe de resulterende kracht $\vec{F}_r$ staat ten opzichte van de
 snelheidsvector $\vec{v}$.
 
-### $\vec{F}_r$ in de richting van $\vec{v}$
+### Resulterende kracht in de richting van de snelheid
 
 Wanneer de resulterende kracht $\vec{F}_r$ dezelfde richting heeft als de
 snelheidsvector $\vec{v}$, dan zal **de grootte van $\vec{v}$ veranderen**. Dat
@@ -115,7 +115,7 @@ $\vec{F}_{rM}$ nu een andere zin heeft dan $\vec{v}$. Maria zal dus
 
 ![Maria vertraagt](img/maria_wind_vertraagt.png)
 
-### $\vec{F}_r$ loodrecht op $\vec{v}$
+### Resulterende kracht loodrecht op de snelheid
 
 Het kan ook dat $\vec{F}_r$ loodrecht staat op $\vec{v}$. In dat geval zal **de
 richting van $\vec{v}$ veranderen**. Het voorwerp zal dus **een bocht nemen**.
@@ -136,7 +136,7 @@ richting heeft, dan zullen **zowel de grootte als de richting van $\vec{v}$
 veranderen**. Dit is een iets ingewikkeldere situatie waar we later pas verder
 op in zullen gaan.
 
-### Geen $\vec{F}_r$, dan geen snelheidsverandering
+### Geen resulterende kracht? Dan ook geen snelheidsverandering
 
 Tenslotte nog even vermelden dat wanneer de resulterende kracht een grootte
 heeft van $0~\si{N}$, dus $\norm{\vec{F}_r} = 0~\si{N}$, dan is er **geen
@@ -154,7 +154,7 @@ Zowel de grootte als de richting van de snelheidsvector $\vec{v}$ kunnen verande
 Wanneer de **grootte** verandert, **versnelt of vertraagt** het voorwerp. Wanneer de **richting** verandert, **neemt het voorwerp een bocht**.
 </Attention>
 
-<Attention title="$\vec{F}_r$ bepaalt de snelheidsverandering">
+<Attention title="De resulterende kracht bepaalt de snelheidsverandering">
 
 Wanneer $\vec{F}_r$ **dezelfde richting** en **dezelfde zin** heeft als $\vec{v}$, dan **versnelt** het voorwerp.
 
