--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -154,7 +154,7 @@ naam vandaan? Het woord bestaat uit twee stukken:
 
 </Expand>
 
-## Het verschil afkorten met $\Delta$
+## Het verschil korter schrijven
 
 Tot slot gaan we het differentiequotiënt nog een tikkeltje korter leren
 schrijven. Verschillen als "$\green{f(x_2)} - \green{f(x_1)}$" en
