--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -16,7 +16,7 @@ images:
 
 Wanneer je springt, duurt het niet lang voor je terug met beide voetjes op de grond staat. Dat komt door de **zwaartekracht**. De aarde trekt alles naar zich toe. In deze les leren we hoe je de zwaartekracht kan tekenen op voorwerpen en hoe je de grootte ervan kan berekenen.
 
-## De zwaartekrachtsvector $\vec{F}_z$
+## De zwaartekrachtsvector
 
 Zwaartekracht is een kracht en is dus [vectorieel](krachtvector). De zwaartekracht die inwerkt op een bepaald voorwerp $A$, duiden we aan als $\vec{F}_{zA}$.
 
