Fix vgl omvormen + merkwaardige producten

--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -21,9 +21,11 @@ Het is meestal de bedoeling om te zoeken naar die waarden voor de onbekende(n) w
 Veel vergelijkingen kunnen we oplossen door de vergelijking **om te vormen**. Een vergelijking omvormen betekent dat je er een nieuwe vergelijking van maakt door in het linker- en rechterlid **dezelfde bewerking** te doen. De vergelijking die je krijgt na het omvormen is **even juist als de oorspronkelijke vergelijking**.
 
 Stel dat
-\begin{equation}\label{eq:1}
+
+$$
 x + 2 = -3x - 1
-\end{equation}
+$$
+
 Aan wat is $x + 2 \orange{- 6}$
 dan gelijk? Wel uit de eerste vergelijking weten we dat $x + 2 = - 3x - 1$. Dan is
 
@@ -32,12 +34,27 @@ x + 2 \orange{- 6} = -3x - 1 \orange{- 6}
 $$
 
 Uitrekenen geeft dus dat
-\begin{equation}\label{eq:2}
-x \orange{- 4} = - 3x \orange{- 7}
-\end{equation}
 
-We zeggen dat we vergelijking \ref{eq:1} hebben _omgevormd_ naar vergelijking \ref{eq:2} door in het linker- en rechterlid _dezelfde bewerking_ te doen (namelijk links en rechts $\orange{6}$ aftrekken).
-Achter elkaar schrijven we de omvorming als volgt:
+$$
+x \orange{- 4} = - 3x \orange{- 7}
+$$
+
+We zeggen dat we de vergelijking
+
+$$
+x + 2 = -3x - 1
+$$
+
+hebben _omgevormd_ naar vergelijking
+
+$$
+x - 4 = - 3x - 7
+$$
+
+door in het linker- en rechterlid _dezelfde bewerking_ te doen (namelijk links
+en rechts $\orange{6}$ aftrekken). Achter elkaar schrijven we de omvorming als
+volgt:
+
 $$
 \begin{aligned}
 &x + &2 &= \quad &-3x - &1\\
@@ -85,7 +102,7 @@ $$
 \begin{aligned}
 2x - 6 &= 8 - x\\
  \Leftrightarrow 2x - 6 \orange{+ x} &= 8 - x \orange{+ x}\\
- \Leftrightarrow 2x - 6 \orange{+ x} &= 8 \cancelto{0}{- x \orange{+ x}}\\
+ \Leftrightarrow 2x - 6 \orange{+ x} &= 8 \cancel{- x \orange{+ x}}\\
  \Leftrightarrow \orange{3x} - 6 &= 8\\
 \end{aligned}
 $$
@@ -97,7 +114,7 @@ $$
 \begin{aligned}
 3x - 6 &= 8\\
  \Leftrightarrow 3x - 6 \orange{+ 6} &= 8 \orange{+6}\\
- \Leftrightarrow 3x \cancelto{0}{- 6 \orange{+ 6}} &= 8 \orange{+6}\\
+ \Leftrightarrow 3x \cancel{- 6 \orange{+ 6}} &= 8 \orange{+6}\\
  \Leftrightarrow 3x &= 14\\
 \end{aligned}
 $$
@@ -108,7 +125,7 @@ $$
 \begin{aligned}
 3x &= 14\\
  \Leftrightarrow \frac{3x}{\orange{3}} &= \frac{14}{\orange{3}}\\
- \Leftrightarrow \cancelto{1}{\frac{3}{\orange{3}}}\cdot x &= \frac{14}{\orange{3}}\\
+ \Leftrightarrow \cancel{\frac{3}{\orange{3}}}\cdot x &= \frac{14}{\orange{3}}\\
  \Leftrightarrow x &= \frac{14}{3}\\
 \end{aligned}
 $$
