--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -119,15 +119,15 @@ De uitkomsten zijn samengevat in de onderstaande tabel.
 <Attention title="Te onthouden">
 
 De drie **merkwaardige producten** zijn:
-\begin{equation}
-(a + b )^2 = a^2 + 2ab + b^2
-\end{equation}
-\begin{equation}
-(a - b )^2 = a^2 - 2ab + b^2
-\end{equation}
-\begin{equation}
-(a + b ) \cdot (a - b) = a^2 - b^2
-\end{equation}
+
+$$
+\begin{aligned}
+(a + b )^2 &= a^2 + 2ab + b^2\\
+(a - b )^2 &= a^2 - 2ab + b^2\\
+(a + b ) \cdot (a - b) &= a^2 - b^2\\
+\end{aligned}
+$$
+
 </Attention>
 
 ## **BLACK OUT**
