Change $ to x in 1g_vgl section title

--- a/src/content/lessen/wiskunde/1g_vgl/_index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/_index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Vergelijkingen van de eerste graad in $x$"
+title: "Vergelijkingen van de eerste graad in x"
 section_color: "#00449e"
 weight: 5
 level: "2e middelbaar"
